grammar.js
    source_file: $ => repeat($.module_definition),

    // parse use declarations
    modifier: $ => choice('public', 'public(package)', 'public(friend)', 'entry', 'native'),
    ability: $ => choice(
      'copy',
      'drop',
      'store',
      'key',
    ),

    module_definition: $ => {
      return seq(
        'module',
        field('module_identity', $.module_identity),
        field('module_body', $.module_body),
      );
    },
    module_body: $ => {
      return seq(
        choice(';', '{'),
        repeat(
          choice(
            $.use_declaration,
            $.friend_declaration,
            $.constant,
            $._function_item,
            $._struct_item,
            $._enum_item,
            $.spec_block,
          )),
        optional('}'),
      );
    },

    // Annotations
    _enum_item: $ => choice(
      $.enum_definition,
    ),
    _struct_item: $ => choice(
      $.native_struct_definition,
      $.struct_definition,
    ),
    _function_item: $ => choice(
      $.native_function_definition,
      $.macro_function_definition,
      $.function_definition,
    ),
    native_function_definition: $ => seq(
      $._function_signature,
      ';'
    ),
    macro_function_definition: $ => seq(
      optional($.modifier),
      'macro',
      $._macro_signature,
      field('body', $.block)
    ),
    _macro_signature: $ => seq(
      optional($.modifier),
      'fun',
      field('name', $._function_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.function_parameters),
      optional(field('return_type', $.ret_type)),
    ),
    function_definition: $ => seq(
      $._function_signature,
      field('body', $.block)
    ),
    _function_signature: $ => seq(
      optional($.modifier),
      optional($.modifier),
      'fun',
      field('name', $._function_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.function_parameters),
      optional(field('return_type', $.ret_type)),
    ),
    function_parameters: $ => seq(
      '(',
      sepBy(',', $.function_parameter),
      ')',
    ),

    // Spec block start
    module_identity: $ => seq(
      field('address', choice($.num_literal, $._module_identifier)),
      '::',
      field('module', $._module_identifier)
    ),

    type_parameters: $ => seq('<', sepBy1(',', $.type_parameter), '>'),
    type_parameter: $ => seq(
      optional('$'),
      optional('phantom'),
      $._type_parameter_identifier,
      optional(seq(':',
        sepBy1('+', $.ability)
      ))
    ),

    // Block

    block: $ => seq(
      '{',
      repeat($.use_declaration),
      repeat($.block_item),
      optional($._expression),
      '}'
    ),
    _expression: $ => choice(
      $.call_expression,
      $.macro_call_expression,
      $.lambda_expression,
      $.if_expression,
      $.while_expression,
      $.loop_expression,
      $.return_expression,
      $.abort_expression,
      $.assign_expression,
      // unary expression is included in binary_op,
      $._unary_expression,
      $.binary_expression,
      $.cast_expression,
      $.quantifier_expression,
      $.identified_expression,
      $.match_expression,
      $.vector_expression,
    ),

    num_literal: $ => choice($.typed_num_literal, $.untyped_num_literal),
    _module_identifier: $ => alias($.identifier, $.module_identifier),
    _type_parameter_identifier: $ => alias($.identifier, $.type_parameter_identifier),
    line_comment: $ => token(seq(
      '//', /.*/
    )),
