test/corpus/modules.txt
====
Module Definitions
====

module a::b {
}

module 0x1::a {
}

module 0x1::A {
}

module a::B {
}

---

(source_file
  (module_definition
    (module_identity
      (module_identifier)
      (module_identifier))
    (module_body))
  (empty_line)
  (module_definition
    (module_identity
      (num_literal)
      (module_identifier))
    (module_body))
  (empty_line)
  (module_definition
    (module_identity
      (num_literal)
      (module_identifier))
    (module_body))
  (empty_line)
  (module_definition
    (module_identity
      (module_identifier)
      (module_identifier))
    (module_body)))
